# auth-proxy

./: .gitignore  LICENSE  auth-proxy.cabal  stack.yaml
auth-claim/: auth-claim.cabal
auth-claim/Network/HTTP/AuthProxy/: Claim.hs
claim/Network/HTTP/AuthProxy/: Claim.hs
doc/: todo
src/: Authenticate.hs  Claim.hs  Config.hs  Email.hs  HTML.hs  Main.hs  Monad.hs  Proxy.hs  Session.hs  Token.hs  Validate.hs
src/Config/: File.hs
src/Monad/: Types.hs
src/Session/: Types.hs
static/: login.html
