name:                auth-proxy
version:             0.1.0.0
synopsis:            An HTTP proxy server that provides authentication
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Karl Voelker
maintainer:          auth-proxy@karlv.net
copyright:           Copyright 2015 Karl Voelker
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-dir:            static
data-files:          login.html

library
  hs-source-dirs:      claim
  ghc-options:
    -Wall
  exposed-modules:
    Network.HTTP.AuthProxy.Claim
  build-depends:
    base >= 4.8 && < 4.9,
    bytestring,
    clientsession,
    email-validate,
    http-types,
    wai
  default-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TupleSections

executable auth-proxy
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:
    -Wall
    -threaded
    -fno-warn-orphans
  other-modules:
    Authenticate
    Claim
    Config
    Config.File
    Email
    HTML
    Monad
    Monad.Types
    Paths_auth_proxy
    Proxy
    Session
    Session.Types
    Token
    Validate
  build-depends:
    aeson,
    auth-proxy,
    base >= 4.8 && < 4.9,
    bytestring,
    clientsession,
    cookie,
    email-validate,
    http-client,
    http-reverse-proxy,
    http-types,
    lens,
    mtl,
    random,
    regex-applicative,
    text,
    tf-random,
    time,
    vector,
    wai,
    wai-extra,
    waitra,
    warp,
    wreq,
    yaml
  default-language:    Haskell2010
  default-extensions:    
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TupleSections
  other-extensions:
    TemplateHaskell

