name:                auth-proxy
version:             0.1.0.0
synopsis:            An HTTP reverse proxy that provides authentication
description:
  By using auth-proxy, a simple HTTP reverse proxy, you can add authentication
  to a web application with minimal change to its code. Configure auth-proxy to
  stand in front of your application, and users can go to /auth/login to
  authenticate themselves. When an authenticated user makes a request that is
  proxied to your application, auth-proxy includes an X-Authenticated-Email
  header containing the email address of the authenticated user (signed and
  encrypted). Use the auth-claim library to easily decrypt and verify an
  X-Authenticated-Email header.
license:             BSD3
license-file:        LICENSE
author:              Karl Voelker
maintainer:          auth-proxy@karlv.net
copyright:           Copyright 2015 Karl Voelker
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-dir:            static
data-files:          login.html

executable auth-proxy
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:
    -Wall
    -threaded
    -fno-warn-orphans
  other-modules:
    Authenticate
    Claim
    Config
    Config.File
    Email
    HTML
    Monad
    Monad.Types
    Paths_auth_proxy
    Proxy
    Session
    Session.Types
    Token
    Validate
  build-depends:
    aeson,
    auth-claim,
    base >= 4.8 && < 4.9,
    bytestring,
    clientsession,
    cookie,
    email-validate,
    http-client,
    http-reverse-proxy,
    http-types,
    lens,
    mtl,
    random,
    regex-applicative,
    text,
    tf-random,
    time,
    vector,
    wai,
    wai-cors,
    wai-extra,
    waitra,
    warp,
    wreq,
    yaml
  default-language:    Haskell2010
  default-extensions:    
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TupleSections
  other-extensions:
    TemplateHaskell

